--- a/src/layout/_header.scss
+++ b/src/layout/_header.scss
@@ -2,9 +2,13 @@ header {
     .static {
         position: relative;
         @include Flex($d: flex, $a-i: center);
-        height: 116px;
         z-index: 999999;
-        background-color: #fff;        
+        background-color: #fff;
+        height: 69px;
+
+        @media (min-width:1024px) {
+            height: 116px;
+        }
     }
 
     .moveDown {
@@ -15,31 +19,29 @@ header {
         height: 69px;
         bottom: 100%;
         transition: all 0.5s;
+
         &.active {
             transform: translateY(100%);
         }
     }
 
-    .search_mob {
-        display: flex;
-        width: 100%;
-        padding: 0 20px 0 0;
-
-        @media (min-width:681px) {
-            display: none;
-        }
-    }
-
     .header_wrapper {
-        @include Flex ($d: flex, $j-c: space-between);
+        @include Flex ($d: flex, $j-c: space-between, $c-g: 20px);
         position: relative;
 
-        @media (min-width:1025px) {
+        @media (min-width:1024px) {
             padding: 0;
+            column-gap: 0;
         }
 
         .logo {
-            width: 212px;
+            width: 40%;
+            flex-shrink: 0;
+
+            @media (min-width:680px) {
+                width: 212px;
+            }
+
             height: 25px;
             padding: 22px 0;
             box-sizing: content-box;
@@ -48,17 +50,39 @@ header {
                 display: block;
                 width: 100%;
                 height: 100%;
-                object-fit: cover;
+                object-fit: contain;
             }
         }
 
         .search_mob {
-            display: none;
+            width: 100%;
 
-            @media (min-width:681px) and (max-width:1024px) {
-                display: flex;
-                width: 45%;
+            @media (min-width:1025px) {
+                display: none;
+            }
 
+            background-color: #fff;
+            display: flex;
+
+            input {
+                padding: 10px 20px 10px 0;
+                border: none;
+                width: 100%;
+
+                &:focus {
+                    outline: none;
+                }
+            }
+
+            button {
+                border: none;
+                background-color: transparent;
+
+                .fa-solid {
+                    color: $clr_arrow;
+                    font-size: 20px;
+                    -webkit-text-stroke: 0.6px #fff;
+                }
             }
 
         }
@@ -103,6 +127,9 @@ header {
                         }
 
                         @media (min-width:1024px) {
+                            padding: 20px 18px;
+                        }
+                        @media (min-width:1200px) {
                             padding: 20px 29px;
                         }
                     }
